crates/rargc/tests/snapshots/test_scripts__impl-105.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stderr] dependencies.sh download"
expression: "String::from_utf8(match \"stderr\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
[31mMissing dependency: [33mfoo[31m[0m

install with [32mgem install foo bar baz[0m

