crates/rargc/tests/snapshots/test_scripts__impl-109.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stdout] catch-all.sh -h"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Catch All example

[4mUsage:[0m
  catch-all [OPTIONS] [COMMAND] [COMMAND_OPTIONS] ...
  catch-all -h|--help
  catch-all -v|--version

[4mCommands:[0m
  multiple ....... With a multiple required argument
  no-multiple .... Command with a simple optional argument

[4mOptions:[0m
  -d --debug
    Debug mode
  -h --help
    Print help
  -v --version
    Pring version

