crates/rargc/tests/snapshots/test_scripts__impl-110.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stdout] catch-all.sh multiple -h"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
With a multiple required argument

[4mUsage:[0m
  multiple [OPTIONS] MESSAGE... 
  multiple -h|--help

[4mArguments:[0m
  MESSAGE
    Message
    [@required, @multiple]

[4mOptions:[0m
  -d --debug
    Debug mode
  -h --help
    Print help

